--- a/balise.css
+++ b/balise.css
@@ -1,13 +1,15 @@
-body {
-    line-height: 1.75;
+body{
+    background-color: #00130D;
+    background-image: url("images/background.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
+    max-width: 100%;
 }
 
-a {
-    color: aliceblue;
-    
-}
-
-a img{
-    position: absolute;
-    border: 0px;
+html, body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 4000px;
 }
