--- a/container.css
+++ b/container.css
@@ -1,65 +1,54 @@
-.navigation {
-    background-color: #251605;
-    bottom: 0;
-    color: #520044;
-    display: flex;
-    flex-direction: column;
-    font-family: rubik, helvetica, arial, sans-serif;
-    justify-content: space-between;
-    left: 0;
-    padding: 10px 0 18px;
-    position: fixed;
+.accueil {
+    top: 0%;
+    padding-top: 45%;
+    height: 500px;
+    width: 100%;
+    position: absolute;
+    margin: 0;
+    border: 100px;
+}
+
+.sommaire{
+    top: 900px;
+    height: 300px;
+    width: 25%;
+    bottom: 0px;
+    position: static;
+    margin: auto;
+
+}
+
+.main-container{
+    padding-top: 83%;
+    height: 100%;
+    width: 100%;
+    position: static;
+}
+
+.personnage-container{
     top: 0;
-    width: 80px;
-    z-index: 500;
-  
-}
-
-.main-container {
-    top: 0;
-    position: fixed;
-    width:100%;
-    height:100%;
-}
-
-.header-title {
-    box-shadow: #251605;
-    position:relative;
-    z-index: 12;
-    height: 150px;
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: flex-end;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    font-family: optimus;
-    font-size: 50px;
-}
-
-.header {
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: flex-end;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    font-family: optimus;
-    font-size: 50px;
-}
-
-.page-main {
-    background-color: #ffffff;
-    border-radius: 11px;
-    min-height: 90%;
-    padding: 24px 36px;
-    margin-left: 180px;
-    margin-right: 120px;
-    width: 78%;
     position: relative;
+    width: 100%;
+    height: 300px;
+}
 
+.lieux-container{
+    top: 300px;
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+
+.race-container{
+    top: 1000px;
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+
+.objet-container{
+    top: 1500px;
+    position: relative;
+    width: 100%;
+    height: 300px;
 }
