--- a/balise.css
+++ b/balise.css
@@ -1,6 +1,6 @@
 body{
     background-color: #00130D;
-    background-image: url("images/background.jpg");
+    background-image: url("images/background2.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: top;
@@ -12,4 +12,18 @@ html, body{
     padding: 0;
     width: 100%;
     height: 4000px;
+}
+
+* {
+    scroll-behavior: smooth;
+    text-align: none;
+}
+
+img {
+    margin: auto;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+
 }
