--- a/Font/stylesheet.css
+++ b/Font/stylesheet.css
@@ -6,3 +6,7 @@
     font-style: normal;
 
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,300&display=swap');
