--- a/balise.css
+++ b/balise.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #00130D;
+    background-color: #08120d;
     background-image: url("images/background2.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
@@ -16,7 +16,9 @@ html, body{
 
 * {
     scroll-behavior: smooth;
-    text-align: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 img {
@@ -25,5 +27,38 @@ img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-
 }
+
+li {
+    list-style: none;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    .text-accueil {
+        font-size: 10px;
+    }
+
+    #text-sommaire{
+        font-size: 10px;
+    }
+
+    .sommaire{
+        margin: auto;
+        width: 39%;
+    }
+
+    .text-resume{
+        margin: 9px;
+        font-size: 9px;
+    }
+
+    .main-container{
+        padding-top: 120%;
+    }
+
+    .personnage-container{
+        top: 100px;
+    }
+  }
