--- a/slider.css
+++ b/slider.css
@@ -17,6 +17,7 @@
 
 .slideshow {
   position: relative;
+  display: flex;
   width: 100%;
   height: 100%;
 }
@@ -25,7 +26,7 @@
   display: block;
   padding-bottom: calc((100% / 6) * 4);
 }
-.slideshow:hover a {
+.slideshow:hover .fleche {
   opacity: 1;
 }
 .slideshow a {
