--- a/navbar.css
+++ b/navbar.css
@@ -1,4 +1,3 @@
-/* NAVBAR STYLING STARTS */
 
 .navbar {
     font-family: ring;
@@ -15,15 +14,11 @@
 .nav-links a {  
     color: #fff;
 }
-   
-/* LOGO */
-   
+    
 .logo {
     margin: auto;
     font-size: 32px;
 }
-
-/* NAVBAR MENU */
 
 .menu {
     display: flex;
@@ -41,26 +36,6 @@
     padding: 20px 150px;
 }
 
-/* DROPDOWN MENU */
-
-.services {
-    position: relative; 
-}
-
-.dropdown li + li {
-    margin-top: 10px;
-}
-
-.dropdown li {
-    padding: 0.5em 1em;
-    width: 8em;
-    text-align: center;
-}
-
-.dropdown li:hover {
-    background-color: #4c9e9e;
-}
-
 .services:hover .dropdown {
     display: block;
 }
@@ -69,7 +44,6 @@ input[type=checkbox]{
     display: none;
 } 
 
-/*HAMBURGER MENU*/
 
 .hamburger {
     display: none;
@@ -77,14 +51,12 @@ input[type=checkbox]{
     user-select: none;
 }
 
-/* APPLYING MEDIA QUERIES */
-
 @media (max-width: 768px) {
 
     .menu { 
         display:none;
         position: absolute;
-        background-color:teal;
+        background-color:rgb(0, 0, 0);
         right: 0;
         left: 0;
         text-align: center;
@@ -93,7 +65,7 @@ input[type=checkbox]{
 
     .menu li:hover {
         display: inline-block;
-        background-color:#4c9e9e;
+        background-color:#000000;
         transition: 0.3s ease;
     }
 
@@ -116,7 +88,7 @@ input[type=checkbox]{
     }
 
     .dropdown li:hover {
-        background-color: #4c9e9e;
+        background-color: #000000;
     }
 
 }
